# SMTK

./: CMakeLists.txt  ReadMe.mkd
CMake/: CTestCustom.cmake.in  Function.h.in  SMTKMacros.cmake
doc/userguide/model/: index.rst  logging.rst
smtk/: AutoInit.h  CMakeLists.txt  PublicPointerDefs.h  SharedFromThis.h  typesystem.xml
smtk/attribute/: Attribute.cxx  CMakeLists.txt  DoubleItem.cxx  DoubleItem.h  Events.cxx  Events.h  Events.txx  IntItem.cxx  IntItem.h  StringItem.cxx  StringItem.h  System.cxx  System.h  ValueItemTemplate.h
smtk/attribute/testing/cxx/: CMakeLists.txt  unitAttributeEvents.cxx  unitAttributeEvents2.cxx  unitAttributeEvents3.cxx
smtk/bridge/cgm/: CMakeLists.txt
smtk/bridge/discrete/: ArrangementHelper.cxx  ArrangementHelper.h  Session.cxx  Session.h
smtk/bridge/discrete/extension/: CMakeLists.txt
smtk/bridge/discrete/moabreader/: SimpleMoab.h
smtk/bridge/discrete/testing/python/: CMakeLists.txt  discreteReadFile.py
smtk/bridge/exodus/: ReadOperator.cxx  ReadOperator.h  Session.cxx  Session.h
smtk/bridge/polygon/: Operator.h  Session.h
smtk/bridge/polygon/internal/: Config.h  Model.cxx  Vertex.cxx
smtk/bridge/polygon/operators/: CreateEdge.cxx  CreateFaces.cxx  CreateFaces.sbt  CreateModel.cxx
smtk/bridge/polygon/testing/python/: CMakeLists.txt  polygonCreateFaces.py
smtk/bridge/remote/: CMakeLists.txt
smtk/common/: UUID.h
smtk/extension/: CMakeLists.txt
smtk/extension/qt/testing/cxx/: CMakeLists.txt
smtk/extension/vtk/: CMakeLists.txt  vtkMeshMultiBlockSource.h  vtkModelMultiBlockSource.cxx  vtkModelMultiBlockSource.h
smtk/extension/vtkToMesh/: VTKDataConverter.cxx
smtk/io/: AttributeReader.cxx  CMakeLists.txt  ImportJSON.cxx  ImportJSON.h  LogProcessor.h  LogToFile.cxx  LogToFile.h  OperatorLog.cxx  OperatorLog.h  OperatorLogHints.sbt  ResourceSetReader.cxx
smtk/io/testing/cxx/: ResourceSetWriterTest.cxx
smtk/io/testing/python/: CMakeLists.txt  unitOperatorLog.py  unitPythonOperatorLog.py
smtk/mesh/json/: MeshInfo.h
smtk/mesh/moab/: Allocator.cxx  CellTypeToType.cxx  ConnectivityStorage.cxx  HandleRange.h  Interface.cxx  Interface.h  MergeMeshVertices.h  Readers.cxx  Writers.cxx
smtk/model/: ArrangementHelper.cxx  ArrangementHelper.h  ArrangementKind.cxx  CMakeLists.txt  EntityRef.cxx  EntityRef.h  EntityTypeBits.h  GeomEntity.cxx  GeomEntity.h  Manager.cxx  Manager.h  Model.cxx  Operator.h  Session.cxx  Session.h  SessionIOJSON.cxx  StringData.cxx  StringData.h  UseEntity.cxx
smtk/model/testing/cxx/: CMakeLists.txt  unitManager.cxx
smtk/smtk/: __init__.py  log.py  simple.py
